--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net47" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net47" />
 </packages>
