--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net47" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net47" />
+  <package id="Irony.NetCore" version="1.1.11" targetFramework="net47" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net47" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net47" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net47" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net47" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net47" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="morelinq" version="4.3.0" targetFramework="net47" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net47" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net47" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
+  <package id="System.Console" version="4.3.1" targetFramework="net47" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net47" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net47" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO.Packaging" version="8.0.1" targetFramework="net47" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net47" />
+  <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" targetFramework="net47" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
 </packages>
