--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net47" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net47" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="morelinq" version="4.3.0" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
